--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "all-the-news-that-s-fit-to-scrape",
   "version": "1.0.0",
+  "engines" : {
+    "node" : "12.1.0",
+    "npm" : "6.11.3"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
